Session id creation logic
